flux/infrastructure/webapps/cms/middleware.yaml
# Auto-split from cluster files
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: directus-cors
  namespace: webapps
spec:
  headers:
    customResponseHeaders:
      Access-Control-Allow-Origin: https://silex.becklab.cloud
      Access-Control-Allow-Methods: GET,POST,PATCH,DELETE,OPTIONS
      Access-Control-Allow-Headers: Content-Type,Authorization,Accept
      Access-Control-Allow-Credentials: 'true'
      Access-Control-Max-Age: '86400'
