flux/infrastructure/webapps/cms/ingressroute.yaml
# Auto-split from cluster files
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: directus
  namespace: webapps
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`cms.becklab.cloud`) && Method(`OPTIONS`)
    middlewares:
    - name: directus-cors
    services:
    - name: directus
      port: 8055
  - kind: Rule
    match: Host(`cms.becklab.cloud`)
    middlewares:
    - name: directus-cors
    - name: sso-admin-chain
      namespace: identity
    services:
    - name: directus
      port: 8055
  tls:
    secretName: cms-tls
